# IOptimal

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_GUIDE.md  AUDIT_REPORT.md  CALIBRATION_GUIDE.md  CLAUDE.md  CLI_GUIDE.md  Dockerfile  ENGINEERING_AUDIT.md  IOPTIMAL_PLATFORM_PROMPT.md  IOptimal.spec  MISSION.md  QUICKSTART.md  README.md  USAGE.md  __main__.py  _commit_msg.txt  _fix_objective.py  _git_ops.py  _git_push.py  _git_push2.py  _git_push3.py  _git_push4.py  _git_push5.py  _git_push6.py  _git_push7.py  _git_push_result.txt  _git_push_result2.txt  _git_push_result3.txt  _git_push_result4.txt  _git_push_result5.txt  _git_push_result6.txt  _git_push_result7.txt  _git_result.txt  _syntax_check.py  _syntax_check2.py  _syntax_result2.txt  (+81 more)
.claude/: settings.local.json
.ioptimal_app/: ioptimal_web.sqlite3
Acura Setups/: ARA_26s1_ARXGTP_IMSA_LeMans_Q1.0.sto  ARA_26s1_ARXGTP_IMSA_Watkins_Q1.1.sto  ARA_26s2_ARXGTP_IMSA_Hock_Enduro.sto  ARA_26s2_ARXGTP_Sebring12hr_R1.0.sto  P1Doks_AcuraGTP_Daytona_R_26S1W5.sto  P1Doks_AcuraGTP_Daytona_Rsafe_26S1W5.sto  P1Doks_AcuraGTP_Hockenheim_R_26S2W3.sto  P1Doks_AcuraGTP_WatkinsGlen_E_26S1W7.sto  VRS_26S1MC_ARX06_IMSA_Daytona_R1.sto  VRS_26S1MC_ARX06_IMSA_Daytona_R1_Safe.sto  VRS_26S1MC_ARX06_IMSA_LeMans_R1.sto  VRS_26S1MC_ARX06_IMSA_RoadAmerica_R1_Wet.sto  VRS_26S1MC_ARX06_IMSA_Sebring_Q1.sto  VRS_26S1MC_ARX06_IMSA_Sebring_Q1_Safe.sto  VRS_26S1MC_ARX06_IMSA_Sebring_Q1_Wet.sto  VRS_26S1MC_ARX06_IMSA_Sebring_R1_Wet.sto  VRS_26S1MC_ARX06_IMSA_WatkinsGlen_R1.sto  VRS_26S1MC_ARX06_IMSA_WatkinsGlen_R1_Full.sto  (+16 more)
(+2109 files in other folders)
