[project]
name = "ioptimal"
version = "0.1.0"
description = "Physics-based setup solver for iRacing GTP/Hypercar class"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "IOptimal Team" }
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ioptimal = "ioptimal.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ioptimal"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
